--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "start:hmr": "npm run server:dev:hmr",
     "start": "npm run server:dev",
     "test": "karma start",
+    "test:server": "NODE_ENV=test mocha",
     "tslint": "tslint",
     "typedoc": "typedoc",
     "version": "npm run build",
@@ -59,22 +60,32 @@
     "webpack": "webpack"
   },
   "dependencies": {
-    "@angular/common": "2.0.0",
-    "@angular/compiler": "2.0.0",
-    "@angular/core": "2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "2.0.0",
-    "@angular/platform-browser": "2.0.0",
-    "@angular/platform-browser-dynamic": "2.0.0",
-    "@angular/platform-server": "2.0.0",
-    "@angular/router": "3.0.0",
+    "@angular/common": "2.0.2",
+    "@angular/compiler": "2.0.2",
+    "@angular/core": "2.0.2",
+    "@angular/forms": "^2.0.2",
+    "@angular/http": "2.0.2",
+    "@angular/platform-browser": "2.0.2",
+    "@angular/platform-browser-dynamic": "2.0.2",
+    "@angular/platform-server": "2.0.2",
+    "@angular/router": "3.0.2",
     "@angularclass/conventions-loader": "^1.0.2",
     "@angularclass/hmr": "~1.2.0",
     "@angularclass/hmr-loader": "~3.0.2",
     "assets-webpack-plugin": "^3.4.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express": "^4.14.0",
+    "express-jwt": "^5.1.0",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
+    "jsonwebtoken": "^7.1.9",
+    "method-override": "^2.3.6",
+    "mongoose": "^4.6.3",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "~0.6.17"
   },
@@ -89,13 +100,30 @@
     "@types/webpack": "^1.12.34",
     "angular2-template-loader": "^0.5.0",
     "awesome-typescript-loader": "^2.2.1",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.16.3",
+    "babel-runtime": "^6.11.6",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "codelyzer": "~0.0.28",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "del": "^2.2.2",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.11.0",
+    "gulp": "^3.9.1",
+    "gulp-docco": "0.0.4",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-scss-lint": "^0.4.0",
+    "gulp-util": "^3.0.7",
     "html-webpack-plugin": "^2.21.0",
     "imports-loader": "^0.6.5",
     "istanbul-instrumenter-loader": "^0.2.0",
@@ -109,7 +137,10 @@
     "karma-remap-coverage": "^0.1.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "1.8.0",
+    "mocha": "^3.1.2",
+    "morgan": "^1.7.0",
     "parse5": "^1.3.2",
+    "path": "^0.12.7",
     "phantomjs": "^2.1.7",
     "protractor": "^3.2.2",
     "raw-loader": "0.5.1",
@@ -126,8 +157,9 @@
     "typescript": "2.0.3",
     "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.22",
-    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^2.1.0-beta.2",
+    "webpack-hot-middleware": "^2.13.0",
     "webpack-md5-hash": "^0.0.5",
     "webpack-merge": "^0.14.1"
   },
