Integration of file-upload using connect-multiparty

--- a/config/config.json
+++ b/config/config.json
@@ -8,5 +8,6 @@
     "TEST" : "mongodb://localhost:27017/tlog2016-test"
   },
 
-  "SESSION_SECRET" : "E9A1834F69C19BB2962DF8F262652"
+  "SESSION_SECRET" : "E9A1834F69C19BB2962DF8F262652",
+  "MAX_IMAGE_DIMENSION": 500
 }
