--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "server": "npm run server:dev",
     "start:hmr": "npm run server:dev:hmr",
     "start": "npm run server:dev",
-    "test": "karma start",
+    "test": "karnpma start",
     "test:server": "NODE_ENV=test mocha",
     "test:server:w": "NODE_ENV=test mocha -w",
     "tslint": "tslint",
@@ -76,10 +76,13 @@
     "assets-webpack-plugin": "^3.4.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
+    "gm": "^1.23.0",
+    "gridfs-stream": "^1.1.1",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "jsonwebtoken": "^7.1.9",
