--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "express-jwt": "^5.1.0",
+    "fabric": "^1.7.3",
     "gm": "^1.23.0",
     "gridfs-stream": "^1.1.1",
     "http-server": "^0.9.0",
